--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Título de la página</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Excuse Generator</title>
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+
   </head>
   <body>
-    <h1>You'll not believe this but...</h1>
-    <p id="excuse"></p>
-    <p>🤡</p>
+    <!-- Hero sacado de Bootstrap y modificado-->
+    <div class="px-4 py-5 my-5 text-center">
+      <h1 class="display-1 fw-bold text-body-emphasis">You'll think im joking but...</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4 display-5" id="excuse"></p>
+
+        <!-- Boton que recarga la pagina (actua como un F5)-->
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button onClick="window.location.reload();" type="button" class="btn btn-primary btn-lg px-4 gap-3" url="">Give me another one!</button>
+        </div>
+        
+      </div>
+    </div>
+    <!-- Js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
